--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
         "styled-components": "^5.0.0",
         "webfontloader": "^1.6.28"
     },
+    "homepage": "",
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
