--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "scripts": {
     "start": "concurrently \"cd client && yarn start\" \"cd server && yarn start\""
-},
-"dependencies": {
-    "concurrently": "^5.3.0"
-},
+  },
+  "dependencies": {
+    "concurrently": "^5.3.0",
+    "file-saver": "^2.0.2",
+    "react-data-export": "^0.6.0",
+    "xlsx": "^0.16.7"
+  },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.18.0"
